Fix transparent background when translating too large pages

--- a/gites/theme/static/css/style.css
+++ b/gites/theme/static/css/style.css
@@ -152,6 +152,9 @@ z-index: 1500;
 margin-bottom:0px;
 }
 
+#content #fieldset-default.formPanel {
+background-color: #E7E9E8;
+}
 
 /*** INTERFACE ***/
 #wrapper{
